--- a/week1/index.html
+++ b/week1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>第一週任務：RWD網頁切版</title>
-    <link rel="stylesheet" type="text/css" href="rwd_homepage.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <!-- Navbar -->
