--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
     <head>
         <meta charset="utf-8" /> 
-            <meta http-equiv="refresh" content="0; url=./week1/index.html" />
+            meta http-equiv="refresh" content="0; url=./week2" />
+            <!--<meta http-equiv="refresh" content="0; url=./week1/index.html" />-->
         <title>跳轉網頁</title>
     </head>
     <body>   
         
     </body> 
+
 </html>
