--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />             
-            <!--<meta http-equiv="refresh" content="0; url=./week1/index.html" />-->
+            <meta http-equiv="refresh" content="0; url=./week3/index.html" />
         <title>跳轉網頁</title>
     </head>
     <body>   
@@ -10,4 +10,5 @@
     </body> 
 
 </html>
+
 
