--- a/week3/index.html
+++ b/week3/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Attractions in Taipei</title>
-    <link rel="stylesheet" type="text/css" href="week3-task3.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <!-- Navbar -->
